# researchpipe

./: .env.example  .gitignore  EDD.md  LICENSE  PRD.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  postman_collection.json  pyproject.toml
backend/corpus/: __init__.py  chunker.py  embed_pipeline.py  manifest_builder.py  refine_unparsed.py
backend/migrations/: 001_corpus_init.sql  002_corpus_chunks.sql
backend/scripts/: export_openapi.py  playground_audit.py  sdk_consistency.py
backend/src/researchpipe_api/: agent_runner.py  agent_tools.py  aliases.py  auth.py  corpus_db.py  db.py  deep_research.py  extract_research_prompt.py  llm.py  main.py  middleware.py  mocks.py  multi_search.py  research_sector.py  schemas.py  settings.py  siliconflow.py  storage.py  tavily.py  web_combined.py
backend/src/researchpipe_api/routes/: admin.py  agent.py  corpus.py  data.py  deep_research.py  search.py  (+3 more)
backend/tests/: conftest.py  test_aliases.py  test_auth.py  test_corpus_chunker.py  test_corpus_parser.py  test_filings_extract_detection.py  test_integration.py  test_middleware.py  test_persistence.py  test_stub_endpoints.py  test_tavily_helpers.py  test_tavily_routes.py
eval/: .env.example  .gitignore  README.md  pyproject.toml  semantic_eval.py  semantic_eval_results.json
eval/src/: ab.py  ab_compare.py  ab_full_bench.py  extract.py  fetch.py  llm.py  parse.py  render_html.py  report.py  revalidate.py  schemas.py
eval/src/audit/: render_benchmark.py  render_c_report.py  render_extract_ab.py  test_a_layer.py  test_c_layer.py  test_extract_ab.py  test_tavily_research.py
eval/src/crawl/: policy_crawler.py  research_crawler.py
eval/src/prompts/: extract_research.py
eval/src/simulation/: runner.py  runner_v2.py  scenarios.py  scenarios_v2.py
eval/uc20/: README.md  analyze.py  cases.py  report.md  results_uc20.json  run.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/researchpipe/: __init__.py  client.py  errors.py
sdk-python/tests/: test_smoke.py
(+88 files in other folders)
