[project]
name = "researchpipe"
version = "0.1.0"
description = "ResearchPipe Python SDK — investment research API · 4 product lines · 50+ endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ResearchPipe" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://rp.zgen.xin"
Documentation = "https://rp.zgen.xin/docs"
Repository = "https://github.com/researchpipe/sdk-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchpipe"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
